[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/GameOver.gd" type="Script" id=1]
[ext_resource path="res://assets/NotoSansTC-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/background2.png" type="Texture" id=3]
[ext_resource path="res://assets/onryou.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/leave-rexlambo.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = 10
extra_spacing_char = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 72
outline_size = 2
outline_color = Color( 0.298039, 0, 0, 1 )
extra_spacing_char = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 42
font_data = ExtResource( 2 )

[node name="GameOver" type="Control"]
margin_right = 720.0
margin_bottom = 1280.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="background2" type="Sprite" parent="."]
position = Vector2( 382.889, 546.999 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Restart" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -143.5
margin_top = 31.0
margin_right = 154.5
margin_bottom = 141.0
custom_fonts/font = SubResource( 1 )
text = "重新開始"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -143.5
margin_top = 150.04
margin_right = 154.5
margin_bottom = 260.04
custom_fonts/font = SubResource( 1 )
text = "回到標題"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.612
margin_top = 269.744
margin_right = 155.388
margin_bottom = 379.744
custom_fonts/font = SubResource( 1 )
text = "結束遊戲"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -92.0
margin_top = 324.0
margin_right = 100.0
margin_bottom = 394.0
custom_fonts/font = SubResource( 2 )
text = "您的分數"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_right = 1.0
margin_top = 394.0
margin_bottom = 464.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -92.0
margin_top = 474.0
margin_right = 100.0
margin_bottom = 544.0
custom_fonts/font = SubResource( 2 )
text = "歷史高分"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
anchor_right = 1.0
margin_top = 544.0
margin_bottom = 614.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OverMenu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -174.0
margin_right = 174.0
margin_bottom = 125.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="OverMenu"]
margin_right = 348.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "遊戲結束"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="OverMenu"]
margin_top = 77.0
margin_right = 348.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.984314, 0.529412, 0.160784, 1 )
text = "無限天堂"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
